--- a/index.html
+++ b/index.html
@@ -34,5 +34,45 @@
     </ul>
   </div>
 </nav>
+
+<!-- Island Snow Logo -->
+<div class ="row">
+  <div class ="col">
+    <img src=".idea/logo.png" alt="Island Snow Logo" class="img-fluid rounded mx-auto d-block py-3">
+  </div>
+</div>
+
+<!-- Second Menu -->
+<div class ="row justify-content-center pt-4">
+  <div class="col-1">
+    <div class="dropdown">
+      <div class="dropdown-toggle"><strong>MEN</strong></div>
+    </div>
+  </div>
+  <div class="col-1">
+    <div class="dropdown">
+      <div class="dropdown-toggle"><strong>WOMEN</strong></div>
+    </div>
+  </div>
+  <div class="col-1">
+    <div class="dropdown">
+      <div class="dropdown-toggle"><strong>KIDS</strong></div>
+    </div>
+  </div>
+  <div class="col-1">
+  <div class="dropdown">
+    <div class="dropdown-toggle"><strong>BRANDS</strong></div>
+  </div>
+</div>
+  <div class="col-1">
+      <strong>SEARCH</strong>
+    </div>
+  </div>
+
+<!-- Main Image -->
+  <div class="row-justify-content-center">
+    <img src=".idea/experience-islandsnow-bootstrap-main.png" class="img-fluid">
+  </div>
+
 </body>
 </html>
