--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
-  <link rel="stylesheet." href="style.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
@@ -73,6 +73,35 @@
   <div class="row-justify-content-center">
     <img src=".idea/experience-islandsnow-bootstrap-main.png" class="img-fluid">
   </div>
+
+<footer>
+    <div class="container">
+      <div class="row">
+        <div class="col">
+          NAVIGATION
+          <hr />
+          <div>About Us</div>
+          <div>Employment</div>
+          <div>Videos</div>
+        </div>
+        <div class="col">
+          MAIN MENU
+          <hr />
+          <div>Men</div>
+          <div>Women</div>
+          <div>Kids</div>
+        </div>
+        <div class="col">
+          CONNECT
+          <hr />
+          <div>Sign up for the latest updates</div>
+          <input type="text" placeholder="Enter Email Address"/>
+          <div class="btn btn-dark">Join</div>
+        </div>
+      </div>
+    </div>
+</footer>
+
 
 </body>
 </html>
