--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Island Snow</title>
+  <title>TheBus New</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
@@ -11,7 +11,7 @@
 </head>
 <body>
 
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-lg navbar-light bg-warning">
   <div class="container">
     <ul class="navbar-nav">
       <li class="nav-item"><i class="bi bi-facebook p-1"></i></li>
@@ -38,7 +38,7 @@
 <!-- Island Snow Logo -->
 <div class ="row">
   <div class ="col">
-    <img src=".idea/logo.png" alt="Island Snow Logo" class="img-fluid rounded mx-auto d-block py-3">
+    <img src=".idea/TheBus_Logo.png" alt="Island Snow Logo" class="img-fluid rounded mx-auto d-block py-3">
   </div>
 </div>
 
