--- a/index.html
+++ b/index.html
@@ -5,40 +5,66 @@
   <title>TheBus New</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+
+  <img class = "image" src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></img>
+
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
+<h1>
 <nav class="navbar navbar-expand-lg navbar-light bg-warning">
   <div class="container">
     <ul class="navbar-nav">
-      <li class="nav-item"><i class="bi bi-facebook p-1"></i></li>
-      <li class="nav-item"><i class="bi bi-twitter p-1"></i></li>
-      <li class="nav-item"><i class="bi bi-pinterest p-1"></i></li>
-      <li class="nav-item"><i class="bi bi-instagram p-1"></i></li>
+      <img src=".idea/TheBus_Logo.png" alt="Island Snow Logo">
+
     </ul>
-    <ul class="navbar-nav">
-      <li class="nav-item"><i class="bi bi-house-fill p-1"></i></li>
-      <li class="nav-item"><i class="bi bi-search p-1"></i></li>
-      <li class="nav-item"><i class="bi bi-person-fill p-1"></i></li>
-      <div class="nav-item dropdown">
-        <div class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-          <i class="bi bi-cart"></i> 0
+    <div class="container">
+      <div class="row">
+        <div class="col-sm">
+          Home
         </div>
-        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <li>Your cart is empty.</li>
-        </ul>
+        <div class="col-sm">
+          Ride TheBus
+        </div>
+        <div class="col-sm">
+          Fares & Passes
+        </div>
+        <div class="col-sm">
+          Customer Service
+        </div>
+        <div class="col-sm">
+          Detours/Service Changes
+        </div>
+        <div class="col-sm">
+          About TheBus
+        </div>
+        <div class="col-sm">
+          The Handi-Van
+        </div>
+        <div class="col-sm">
+          <div class="dropdown">
+            <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              <img src=".idea/googleimage.jpg" alt="Island Snow Logo" width="20" height="20">
+              Select Language
+            </button>
+            <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+              <a class="dropdown-item" href="#">Action</a>
+              <a class="dropdown-item" href="#">Another action</a>
+              <a class="dropdown-item" href="#">Something else here</a>
+            </div>
+          </div>
+        </div>
       </div>
-    </ul>
+    </div>
   </div>
 </nav>
-
+</h1>
 <!-- Island Snow Logo -->
 <div class ="row">
   <div class ="col">
-    <img src=".idea/TheBus_Logo.png" alt="Island Snow Logo" class="img-fluid rounded mx-auto d-block py-3">
+    <img src=".idea/bus.webp" alt="Island Snow Logo" class="img-fluid rounded mx-auto d-block py-3">
   </div>
 </div>
 
